--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-﻿flask==2.3.2
+flask==2.3.2
 flask-socketio==5.3.4
 flask-cors==4.0.0
 pybit==5.7.0
+pycryptodome==3.19.0
 python-telegram-bot==20.4
 telethon==1.30.3
 requests==2.31.0
