--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ use_demo_account = False
 auto_tp_sl = True
 auto_breakeven = True
 breakeven_after_target = 1
-auto_execute_signals = True
+auto_execute_signals = False
 max_position_size = 1000.0
 risk_percent = 2.0
 
